--- a/app/src/main/res/layout/race_codes.xml
+++ b/app/src/main/res/layout/race_codes.xml
@@ -86,7 +86,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="32dp"
-        android:text="OK"
+        android:text="@string/lbl_ok"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/id_rc_btn_cancel"
@@ -99,7 +99,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
-        android:text="Cancel"
+        android:text="@string/lbl_cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/id_rc_bottom_guideline" />
