--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -85,8 +85,9 @@
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"
-        android:maxLength="2" />
-
+        android:maxLength="2"
+        android:inputType="phone"
+        android:imeOptions="actionDone"/>
 
     <TextView
         android:text="@string/race_sel"
@@ -112,7 +113,9 @@
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"
-        android:maxLength="2" />
+        android:maxLength="2"
+        android:inputType="phone"
+        android:imeOptions="actionDone"/>
 
     <TextView
         android:text="@string/race_time"
