--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,7 +2,11 @@
 <resources>
     <integer name="city_codes_dialog_id">0</integer>
     <integer name="race_codes_dialog_id">1</integer>
+    <integer name="number_pad_dialog_id">2</integer>
 
     <integer name="edit_race_new">0</integer>
     <integer name="edit_race_existing">1</integer>
+
+    <integer name="npCtxRaceNum">0</integer>
+    <integer name="npCtxRaceSel">1</integer>
 </resources>
