--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -17,14 +17,14 @@
         android:gravity="center_vertical|center_horizontal"
         android:layout_marginStart="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/etCityCode"
+        app:layout_constraintBaseline_toBaselineOf="@+id/id_etCityCode"
         android:textColor="#000000"
         android:typeface="normal" />
 
     <EditText
         android:layout_width="48dp"
         android:layout_height="wrap_content"
-        android:id="@+id/etCityCode"
+        android:id="@+id/id_etCityCode"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         android:gravity="center_vertical|center_horizontal"
         android:layout_marginStart="40dp"
@@ -44,19 +44,19 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintVertical_bias="1.0"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
-        app:layout_constraintBaseline_toBaselineOf="@+id/etRaceCode"
+        app:layout_constraintBaseline_toBaselineOf="@+id/id_etRaceCode"
         android:textColor="#000000"
         android:typeface="normal"/>
 
     <EditText
         android:layout_width="48dp"
         android:layout_height="wrap_content"
-        android:id="@+id/etRaceCode"
+        android:id="@+id/id_etRaceCode"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         android:gravity="center_vertical|center_horizontal"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/etCityCode"
-        app:layout_constraintLeft_toLeftOf="@+id/etCityCode"
+        app:layout_constraintTop_toBottomOf="@+id/id_etCityCode"
+        app:layout_constraintLeft_toLeftOf="@+id/id_etCityCode"
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"/>
@@ -69,19 +69,19 @@
         android:layout_marginStart="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
-        app:layout_constraintBaseline_toBaselineOf="@+id/etRaceNum"
+        app:layout_constraintBaseline_toBaselineOf="@+id/id_etRaceNum"
         android:textColor="#000000"
         android:typeface="normal"/>
 
     <EditText
         android:layout_width="48dp"
         android:layout_height="wrap_content"
-        android:id="@+id/etRaceNum"
+        android:id="@+id/id_etRaceNum"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         android:gravity="center_vertical|center_horizontal"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/etRaceCode"
-        app:layout_constraintLeft_toLeftOf="@+id/etRaceCode"
+        app:layout_constraintTop_toBottomOf="@+id/id_etRaceCode"
+        app:layout_constraintLeft_toLeftOf="@+id/id_etRaceCode"
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"
@@ -97,19 +97,19 @@
         android:layout_marginStart="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
-        app:layout_constraintBaseline_toBaselineOf="@+id/etRaceSel"
+        app:layout_constraintBaseline_toBaselineOf="@+id/id_etRaceSel"
         android:textColor="#000000"
         android:typeface="normal"/>
 
     <EditText
         android:layout_width="48dp"
         android:layout_height="wrap_content"
-        android:id="@+id/etRaceSel"
+        android:id="@+id/id_etRaceSel"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         android:gravity="center_vertical|center_horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/etRaceNum"
+        app:layout_constraintTop_toBottomOf="@+id/id_etRaceNum"
         android:layout_marginTop="16dp"
-        app:layout_constraintLeft_toLeftOf="@+id/etRaceNum"
+        app:layout_constraintLeft_toLeftOf="@+id/id_etRaceNum"
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"
@@ -125,12 +125,12 @@
         android:layout_marginStart="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
-        app:layout_constraintBaseline_toBaselineOf="@+id/etRaceTime"
+        app:layout_constraintBaseline_toBaselineOf="@+id/id_etRaceTime"
         android:textColor="#000000"
         android:typeface="normal"/>
 
     <EditText
-        android:id="@+id/etRaceTime"
+        android:id="@+id/id_etRaceTime"
         android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -138,8 +138,8 @@
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"
-        app:layout_constraintLeft_toLeftOf="@+id/etRaceSel"
-        app:layout_constraintTop_toBottomOf="@+id/etRaceSel" />
+        app:layout_constraintLeft_toLeftOf="@+id/id_etRaceSel"
+        app:layout_constraintTop_toBottomOf="@+id/id_etRaceSel" />
 
     <Button
         android:text="@string/save"
@@ -147,10 +147,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/id_btn_save"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
-        app:layout_constraintRight_toRightOf="@+id/etRaceTime"
+        app:layout_constraintRight_toRightOf="@+id/id_etRaceTime"
         android:typeface="normal"
         app:layout_constraintLeft_toLeftOf="@+id/tvRaceTime"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/etRaceTime" />
+        app:layout_constraintTop_toBottomOf="@+id/id_etRaceTime" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
