--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -3,6 +3,7 @@
     <integer name="city_codes_dialog_id">0</integer>
     <integer name="race_codes_dialog_id">1</integer>
     <integer name="number_pad_dialog_id">2</integer>
+    <integer name="time_pick_dialog_id">3</integer>
 
     <integer name="edit_race_new">0</integer>
     <integer name="edit_race_existing">1</integer>
