--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -2,7 +2,6 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/id_navigation"
     app:startDestination="@id/id_main_fragment">
 
     <fragment
@@ -11,9 +10,7 @@
         android:label="Home"
         tools:layout="@layout/main_fragment">
 
-        <action
-            android:id="@+id/mainFragment_to_editFragment"
-            app:destination="@id/id_edit_fragment" />
+        <action app:destination="@id/id_edit_fragment" />
     </fragment>
     <fragment
         android:id="@+id/id_edit_fragment"
