--- a/app/src/main/res/layout/city_codes.xml
+++ b/app/src/main/res/layout/city_codes.xml
@@ -40,91 +40,109 @@
             android:orientation="vertical">
 
             <Button
+                android:id="@+id/id_btn_cc_A"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_A" />
 
             <Button
+                android:id="@+id/id_btn_cc_B"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_B" />
 
             <Button
+                android:id="@+id/id_btn_cc_C"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_C" />
 
             <Button
+                android:id="@+id/id_btn_cc_D"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_D" />
 
             <Button
+                android:id="@+id/id_btn_cc_E"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_E" />
 
             <Button
+                android:id="@+id/id_btn_cc_F"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_F" />
 
             <Button
+                android:id="@+id/id_btn_cc_I"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_I" />
 
             <Button
+                android:id="@+id/id_btn_cc_L"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_L" />
 
             <Button
+                android:id="@+id/id_btn_cc_M"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_M" />
 
             <Button
+                android:id="@+id/id_btn_cc_N"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_N" />
 
             <Button
+                android:id="@+id/id_btn_cc_O"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_O" />
 
             <Button
+                android:id="@+id/id_btn_cc_P"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_P" />
 
             <Button
+                android:id="@+id/id_btn_cc_Q"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_Q" />
 
             <Button
+                android:id="@+id/id_btn_cc_S"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_S" />
 
             <Button
+                android:id="@+id/id_btn_cc_T"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_T" />
 
             <Button
+                android:id="@+id/id_btn_cc_V"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_V" />
 
             <Button
+                android:id="@+id/id_btn_cc_X"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_X" />
 
             <Button
+                android:id="@+id/id_btn_cc_Z"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:text="@string/cc_Z" />
