--- a/app/src/main/res/layout/city_codes.xml
+++ b/app/src/main/res/layout/city_codes.xml
@@ -17,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:id="@+id/id_btn_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
