--- a/app/src/main/res/layout/race_codes.xml
+++ b/app/src/main/res/layout/race_codes.xml
@@ -5,49 +5,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical|center_horizontal"
-            android:orientation="horizontal">
+        <Button
+            android:id="@+id/id_rc_btn_R"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:text="@string/rc_R" />
+        <!--android:background="@drawable/btn_selector"-->
+        <!--android:background="@drawable/btn_round"/>-->
 
-            <Button
-                android:id="@+id/id_rc_btn_R"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:background="@drawable/btn_selector"
-                android:text="@string/rc_R" />
-            <!--android:background="@drawable/btn_round"/>-->
+        <Button
+            android:id="@+id/id_rc_btn_T"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:text="@string/rc_T" />
 
-            <Button
-                android:id="@+id/id_rc_btn_T"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:text="@string/rc_T" />
+        <Button
+            android:id="@+id/id_rc_btn_G"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:text="@string/rc_G" />
 
-            <Button
-                android:id="@+id/id_rc_btn_G"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:text="@string/rc_G" />
+        <Button
+            android:id="@+id/id_rc_btn_S"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:text="@string/rc_S" />
 
-            <Button
-                android:id="@+id/id_rc_btn_S"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:text="@string/rc_S" />
-
-        </LinearLayout>
-    </ScrollView>
-
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
