--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -6,7 +6,7 @@
     android:id="@+id/id_main_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.MainFragment">
+    tools:context=".ui.fragment.MainFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/id_recyclerView"
