--- a/app/src/main/res/layout/number_pad.xml
+++ b/app/src/main/res/layout/number_pad.xml
@@ -2,14 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <Button
         android:id="@+id/id_btn_7"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="7"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +38,6 @@
         android:id="@+id/id_btn_4"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="4"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +67,6 @@
         android:id="@+id/id_btn_1"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="1"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,19 +96,12 @@
         android:id="@+id/id_btn_0"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:text="0"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/id_btn_1" />
+        app:layout_constraintTop_toBottomOf="@+id/id_btn_2" />
 
-    <Button
-        android:id="@+id/id_btn_np_done"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:text="Done"
-        app:layout_constraintStart_toEndOf="@+id/id_btn_0"
-        app:layout_constraintTop_toBottomOf="@+id/id_btn_3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
