--- a/app/src/main/res/layout/number_pad.xml
+++ b/app/src/main/res/layout/number_pad.xml
@@ -1,107 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <Button
-        android:id="@+id/id_btn_7"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:text="7"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/id_btn_8"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="8"
-        app:layout_constraintStart_toEndOf="@+id/id_btn_7"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/id_np_btn_7"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:text="7" />
 
-    <Button
-        android:id="@+id/id_btn_9"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="9"
-        app:layout_constraintStart_toEndOf="@+id/id_btn_8"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/id_np_btn_8"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:text="8" />
 
-    <Button
-        android:id="@+id/id_btn_4"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:text="4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/id_btn_7" />
+        <Button
+            android:id="@+id/id_np_btn_9"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:text="9" />
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/id_btn_5"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="5"
-        app:layout_constraintStart_toEndOf="@+id/id_btn_4"
-        app:layout_constraintTop_toBottomOf="@+id/id_btn_8" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="96dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/id_btn_6"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="6"
-        app:layout_constraintStart_toEndOf="@+id/id_btn_5"
-        app:layout_constraintTop_toBottomOf="@+id/id_btn_9" />
+        <Button
+            android:id="@+id/id_np_btn_4"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:text="4" />
 
-    <Button
-        android:id="@+id/id_btn_1"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:text="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/id_btn_4" />
+        <Button
+            android:id="@+id/id_np_btn_5"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:text="5" />
 
-    <Button
-        android:id="@+id/id_btn_2"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="2"
-        app:layout_constraintStart_toEndOf="@+id/id_btn_1"
-        app:layout_constraintTop_toBottomOf="@+id/id_btn_5" />
+        <Button
+            android:id="@+id/id_np_btn_6"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:text="6" />
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/id_btn_3"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="3"
-        app:layout_constraintStart_toEndOf="@+id/id_btn_2"
-        app:layout_constraintTop_toBottomOf="@+id/id_btn_6" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="160dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/id_btn_0"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/id_btn_2" />
+        <Button
+            android:id="@+id/id_np_btn_1"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:text="1" />
 
+        <Button
+            android:id="@+id/id_np_btn_2"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:text="2" />
+
+        <Button
+            android:id="@+id/id_np_btn_3"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:text="3" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="224dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/id_np_btn_0"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:text="0" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
