--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -8,9 +8,10 @@
     <integer name="edit_race_new">0</integer>
     <integer name="edit_race_existing">1</integer>
 
-    <integer name="ctxNoCityCode">0</integer> <!--No City Code selected when dialog showing.-->
-    <integer name="ctxNoRaceCode">1</integer> <!--No Race Code selected when dialog showing.-->
-    <integer name="ctxNoNumber">3</integer>   <!--No number selected when NumberPad dialog showing.-->
-    <integer name="npCtxRaceNum">4</integer>
-    <integer name="npCtxRaceSel">5</integer>
+    <integer name="ctxNoCityCode">0</integer>    <!--No city code selected when dialog showing.-->
+    <integer name="ctxNoRaceCode">1</integer>    <!--No race code selected when dialog showing.-->
+    <integer name="ctxNoRaceNumber">3</integer>  <!--No race number selected when NumberPad dialog showing.-->
+    <integer name="ctxNoRaceSel">4</integer>     <!--No race selection made when NumberPad dialog showing.-->
+    <integer name="npCtxRaceNum">5</integer>
+    <integer name="npCtxRaceSel">6</integer>
 </resources>
