--- a/app/src/main/res/layout/edit_fragment2.xml
+++ b/app/src/main/res/layout/edit_fragment2.xml
@@ -85,10 +85,20 @@
         app:layout_constraintTop_toBottomOf="@+id/id_tv_race_sel" />
 
     <Button
+        android:id="@+id/id_btn_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="256dp"
+        android:textAppearance="@android:style/TextAppearance.Material.Notification.Time"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/id_btn_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="256dp"
         android:layout_marginTop="256dp"
         android:text="Save"
         app:layout_constraintStart_toStartOf="parent"
