--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -6,7 +6,7 @@
     android:id="@+id/id_edit_fragment2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.EditFragment2">
+    tools:context=".ui.fragment.EditFragment">
 
     <TextView
         android:id="@+id/id_tv_city_code"
