--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <declare-styleable name="SwipeLayout">
-        <attr name="dragEdge">
+        <attr name="dragFromEdge">
             <flag name="left" value="1" />
             <flag name="right" value="2" />
             <flag name="top" value="4" />
@@ -11,7 +10,7 @@
         
         <attr name="mode">
             <enum name="normal" value="0" />
-            <enum name="same_level"   value="1" />
+            <enum name="same_level" value="1" />
         </attr>
 
         <attr name="flingVelocity" format="integer" />
