--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/id_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,11 +19,10 @@
         app:navGraph="@navigation/navigation" />
 
     <!-- BottomNavigationView here will co-exist with the FAB. -->
-    <!-- Used to anchor a SnackBar with an UNDO button in the RaceAdapter. -->
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/id_bottom_nav_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <!--<com.google.android.material.bottomnavigation.BottomNavigationView-->
+        <!--android:id="@+id/id_bottom_nav_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content" />-->
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/id_fab"
