--- a/app/src/main/res/layout/row_race.xml
+++ b/app/src/main/res/layout/row_race.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:text="B"
+            android:text="@string/abbrv_city_code"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/id_tv_city_code"
@@ -30,7 +30,7 @@
             android:layout_marginBottom="16dp" />
 
         <TextView
-            android:text="R"
+            android:text="@string/abbrv_race_code"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/id_tv_race_code"
@@ -42,7 +42,7 @@
             android:layout_marginBottom="16dp" />
 
         <TextView
-            android:text="8"
+            android:text="@string/abbrv_race_no"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/id_tv_race_no"
@@ -56,7 +56,7 @@
             android:layout_marginBottom="16dp" />
 
         <TextView
-            android:text="8"
+            android:text="@string/abbrv_race_sel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/id_tv_race_sel"
@@ -69,7 +69,7 @@
             android:layout_marginBottom="16dp" />
 
         <TextView
-            android:text="23:59"
+            android:text="@string/abbrv_time"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/id_tv_race_time"
@@ -81,6 +81,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp" />
 
+        <!-- TBA -->
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
